2007-03-26  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Add accessible name to the track progress slider (thanks Patrick
	Wade, rest of #364376).

2007-03-26  Ross Burton  <ross@burtonini.com>

	* src/bacon-volume.[ch]:
	Update from libbacon.  Apart from being a good thing to do this
	also adds an accessible name (half of #364376).
	
2007-03-26  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Add an accessible name to the table (thanks Patrick Wade, #364372)

2007-03-15  Christian Kirbach  <Christian.Kirbach@googlemail.com>

	* src/sj-main.c:
	Initialise threading system before calling gst_init_get_option_group()
	(#418717).

2007-03-20  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	When displaying strerror(), convert to UTF-8 first (#419512,
	thanks Pascal Terjan).

2007-03-12  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.desktop.in.in:
	Remove "Application" category (#417362).

2007-03-04  Ross Burton  <ross@burtonini.com>

	* tests/Makefile.am:
	Link to libjuicer.la instead of the sources directly.  This fixes
	srcdir!=builddir builds, thanks Loic Minier. (#414159).

	* libjuicer/Makefile.am:
	marshal.c depends on marshal.h, and whitespace cleanup (Loic).

2007-01-29  Ross Burton  <ross@burtonini.com>

	* configure.ac:
	* NEWS:
	Version 2.16.3.

2007-01-28  Ross Burton  <ross@burtonini.com>

	* data/Makefile.am:
	Fix install target (thanks Christian Persch, #401756)

2006-12-31  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Set the urgency hint on the extract completed dialog (#388577,
	Sebastien Bacher)

2006-12-31  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Fix a compile warning.

2006-12-20  Christian Persch  <chpe@cvs.gnome.org>

	* libjuicer/.cvsignore:
	* tests/Makefile.am:
	Add cvsignore, and use variables instead of configure
	substitutions in Makefile. Bug #387906.

2006-12-08  Adam Petaccia <adam@tpetaccia.com>

	* src/sj-extracting.h:
	* src/sj-play.h:
	* src/sj-prefs.h: