@@ -1,5 +1,11 @@
 2007-03-26  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-main.c:
+	Don't crash if the device exists but nautilus-burn does not know
+	about it (Pascal Terjan, #389044).
+
+2007-03-26  Ross Burton  <ross@burtonini.com>
+
 	* data/sound-juicer.glade:
 	Add accessible name to the track progress slider (thanks Patrick
 	Wade, rest of #364376).
